--- a/internal/apis/acme/fuzzer/BUILD.bazel
+++ b/internal/apis/acme/fuzzer/BUILD.bazel
@@ -4,7 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = ["fuzzer.go"],
     importpath = "github.com/jetstack/cert-manager/internal/apis/acme/fuzzer",
-    visibility = ["//pkg:__subpackages__"],
+    visibility = ["//:__subpackages__"],
     deps = [
         "//internal/apis/acme:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
