--- a/internal/apis/certmanager/BUILD.bazel
+++ b/internal/apis/certmanager/BUILD.bazel
@@ -13,7 +13,7 @@ go_library(
         "zz_generated.deepcopy.go",
     ],
     importpath = "github.com/jetstack/cert-manager/internal/apis/certmanager",
-    visibility = ["//pkg:__subpackages__"],
+    visibility = ["//:__subpackages__"],
     deps = [
         "//internal/apis/acme:go_default_library",
         "//internal/apis/meta:go_default_library",
