--- a/test/unit/discovery/BUILD.bazel
+++ b/test/unit/discovery/BUILD.bazel
@@ -4,7 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = ["discovery.go"],
     importpath = "github.com/jetstack/cert-manager/test/unit/discovery",
-    visibility = ["//pkg:__subpackages__"],
+    visibility = ["//visibility:public"],
     deps = [
         "@com_github_googleapis_gnostic//openapiv2:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
