Add test for flag precedence
Signed-off-by: James Munnelly <jmunnelly@apple.com>

--- a/cmd/webhook/app/BUILD.bazel
+++ b/cmd/webhook/app/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
@@ -42,4 +42,11 @@ filegroup(
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["webhook_test.go"],
+    embed = [":go_default_library"],
+    deps = ["//cmd/webhook/app/options:go_default_library"],
 )
