--- a/deploy/charts/cert-manager/templates/deployment.yaml
+++ b/deploy/charts/cert-manager/templates/deployment.yaml
@@ -52,18 +52,9 @@ spec:
       {{- with .Values.global.priorityClassName }}
       priorityClassName: {{ . | quote }}
       {{- end }}
-      {{- $enabledDefined := gt (len (keys (pick .Values.securityContext "enabled"))) 0 }}
-      {{- $legacyEnabledExplicitlyOff := and $enabledDefined (not .Values.securityContext.enabled) }}
-      {{- if and .Values.securityContext (not $legacyEnabledExplicitlyOff) }}
+      {{- if .Values.securityContext }}
       securityContext:
-        {{- if .Values.securityContext.enabled }}
-        {{/* support legacy securityContext.enabled and its two parameters */}}
-        fsGroup: {{ default 1001 .Values.securityContext.fsGroup }}
-        runAsUser: {{ default 1001 .Values.securityContext.runAsUser }}
-        {{- else }}
-        {{/* this is the way forward: support an arbitrary yaml block */}}
         {{- toYaml .Values.securityContext | nindent 8 }}
-        {{- end }}
       {{- end }}
       {{- with .Values.volumes }}
       volumes:
