--- a/test/integration/acme/BUILD.bazel
+++ b/test/integration/acme/BUILD.bazel
@@ -3,6 +3,9 @@ load("@io_bazel_rules_go//go:def.bzl", "go_test")
 go_test(
     name = "go_default_test",
     srcs = ["orders_controller_test.go"],
+    gotags = [
+        "integration_test",
+    ],
     deps = [
         "//pkg/acme/accounts/test:go_default_library",
         "//pkg/acme/client:go_default_library",
