--- a/test/integration/validation/BUILD.bazel
+++ b/test/integration/validation/BUILD.bazel
@@ -17,6 +17,9 @@ filegroup(
 go_test(
     name = "go_default_test",
     srcs = ["certificaterequest_test.go"],
+    gotags = [
+        "integration_test",
+    ],
     deps = [
         "//pkg/api:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
