namespaceSelector matchExpressions to be configured on ValidatingWebHookConfiguration
Fixes #4114

Signed-off-by: John Stewart <john.anthony.stewart@gmail.com>

--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -238,6 +238,9 @@ webhook:
   # Optional additional annotations to add to the webhook ValidatingWebhookConfiguration
   # validatingWebhookConfigurationAnnotations: {}
 
+  # Optional additional namespaceSelector matchExpressions to add to the webhook ValidatingWebhookConfiguration
+  # validatingWebhookConfigurationNamespaceSelectorMatchExpressions: []
+
   # Optional additional annotations to add to the webhook service
   # serviceAnnotations: {}
 
