--- a/cmd/ctl/pkg/status/certificate/BUILD.bazel
+++ b/cmd/ctl/pkg/status/certificate/BUILD.bazel
@@ -12,7 +12,7 @@ go_library(
         "//cmd/ctl/pkg/build:go_default_library",
         "//cmd/ctl/pkg/factory:go_default_library",
         "//cmd/ctl/pkg/status/util:go_default_library",
-        "//pkg/apis/acme/v1beta1:go_default_library",
+        "//pkg/apis/acme/v1:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/ctl:go_default_library",
@@ -50,7 +50,7 @@ go_test(
     srcs = ["certificate_test.go"],
     embed = [":go_default_library"],
     deps = [
-        "//pkg/apis/acme/v1beta1:go_default_library",
+        "//pkg/apis/acme/v1:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//test/unit/gen:go_default_library",
