allow to honor the labels of cert-manager
With setting honorLabels to "true" one can get rid of the "exported_namespace" label in scraped cert-manager metrics.

Signed-off-by: Sebastian Nickel <nick@nine.ch>

--- a/deploy/charts/cert-manager/templates/servicemonitor.yaml
+++ b/deploy/charts/cert-manager/templates/servicemonitor.yaml
@@ -35,4 +35,5 @@ spec:
     path: {{ .Values.prometheus.servicemonitor.path }}
     interval: {{ .Values.prometheus.servicemonitor.interval }}
     scrapeTimeout: {{ .Values.prometheus.servicemonitor.scrapeTimeout }}
+    honorLabels: {{ .Values.prometheus.servicemonitor.honorLabels }}
 {{- end }}
