--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -174,6 +174,7 @@ prometheus:
     interval: 60s
     scrapeTimeout: 30s
     labels: {}
+    honorLabels: false
 
 # Use these variables to configure the HTTP_PROXY environment variables
 # http_proxy: "http://proxy:8080"
