--- a/devel/addon/ingressnginx/BUILD.bazel
+++ b/devel/addon/ingressnginx/BUILD.bazel
@@ -1,19 +1,21 @@
 load("@io_bazel_rules_docker//container:bundle.bzl", "container_bundle")
 
-# Ingress image that works on Kubernetes v1.16 - v1.20
+# Ingress image that works on Kubernetes older than v1.22
+# Image version can be bumped in test/e2e/images.bzl
 container_bundle(
-    name = "bundle_v0.48.1",
+    name = "bundle_pre_networking_v1",
     images = {
-        "k8s.gcr.io/ingress-nginx/controller:v0.48.1": "@io_kubernetes_ingress-nginx_old//image",
+        "k8s.gcr.io/ingress-nginx/controller:v0.49.3": "@io_kubernetes_ingress-nginx_old//image",
     },
     tags = ["manual"],
 )
 
-# Ingress image that works on Kubernetes v1.19 -> (including v1.22)
+# Ingress image that works on Kubernetes v1.19+
+# Image version can be bumped in test/e2e/images.bzl
 container_bundle(
-    name = "bundle_v1.0.2",
+    name = "bundle",
     images = {
-        "k8s.gcr.io/ingress-nginx/controller:v1.0.2": "@io_kubernetes_ingress-nginx_new//image",
+        "k8s.gcr.io/ingress-nginx/controller:v1.1.0": "@io_kubernetes_ingress-nginx_new//image",
     },
     tags = ["manual"],
 )
