--- a/internal/apis/config/webhook/BUILD.bazel
+++ b/internal/apis/config/webhook/BUILD.bazel
@@ -5,13 +5,13 @@ go_library(
     srcs = [
         "doc.go",
         "register.go",
-        "types_webhook.go",
+        "types.go",
         "zz_generated.deepcopy.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/internal/apis/config",
+    importpath = "github.com/jetstack/cert-manager/internal/apis/config/webhook",
     visibility = ["//:__subpackages__"],
     deps = [
-        "//pkg/apis/config:go_default_library",
+        "//pkg/apis/config/webhook:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
@@ -29,11 +29,11 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
-        "//internal/apis/config/fuzzer:all-srcs",
-        "//internal/apis/config/install:all-srcs",
-        "//internal/apis/config/scheme:all-srcs",
-        "//internal/apis/config/v1alpha1:all-srcs",
-        "//internal/apis/config/validation:all-srcs",
+        "//internal/apis/config/webhook/fuzzer:all-srcs",
+        "//internal/apis/config/webhook/install:all-srcs",
+        "//internal/apis/config/webhook/scheme:all-srcs",
+        "//internal/apis/config/webhook/v1alpha1:all-srcs",
+        "//internal/apis/config/webhook/validation:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
