--- a/cmd/webhook/app/BUILD.bazel
+++ b/cmd/webhook/app/BUILD.bazel
@@ -8,7 +8,7 @@ go_library(
     deps = [
         "//cmd/util:go_default_library",
         "//cmd/webhook/app/options:go_default_library",
-        "//internal/apis/config:go_default_library",
+        "//internal/apis/config/webhook:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/util:go_default_library",
         "//pkg/webhook:go_default_library",
