--- a/internal/apis/config/webhook/fuzzer/BUILD.bazel
+++ b/internal/apis/config/webhook/fuzzer/BUILD.bazel
@@ -3,10 +3,10 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["fuzzer.go"],
-    importpath = "github.com/jetstack/cert-manager/internal/apis/config/fuzzer",
+    importpath = "github.com/jetstack/cert-manager/internal/apis/config/webhook/fuzzer",
     visibility = ["//:__subpackages__"],
     deps = [
-        "//internal/apis/config:go_default_library",
+        "//internal/apis/config/webhook:go_default_library",
         "@com_github_google_gofuzz//:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime/serializer:go_default_library",
         "@io_k8s_utils//pointer:go_default_library",
