--- a/internal/apis/config/webhook/validation/BUILD.bazel
+++ b/internal/apis/config/webhook/validation/BUILD.bazel
@@ -3,10 +3,10 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["validation.go"],
-    importpath = "github.com/jetstack/cert-manager/internal/apis/config/validation",
+    importpath = "github.com/jetstack/cert-manager/internal/apis/config/webhook/validation",
     visibility = ["//:__subpackages__"],
     deps = [
-        "//internal/apis/config:go_default_library",
+        "//internal/apis/config/webhook:go_default_library",
         "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
     ],
 )
