--- a/cmd/webhook/app/testing/BUILD.bazel
+++ b/cmd/webhook/app/testing/BUILD.bazel
@@ -8,7 +8,7 @@ go_library(
     deps = [
         "//cmd/webhook/app:go_default_library",
         "//cmd/webhook/app/options:go_default_library",
-        "//pkg/logs:go_default_library",
+        "//pkg/logs/testing:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//pkg/webhook/server:go_default_library",
         "@com_github_spf13_pflag//:go_default_library",
