--- a/test/integration/conversion/BUILD.bazel
+++ b/test/integration/conversion/BUILD.bazel
@@ -3,20 +3,23 @@ load("@io_bazel_rules_go//go:def.bzl", "go_test")
 go_test(
     name = "go_default_test",
     srcs = ["conversion_test.go"],
+    data = [
+        "//pkg/webhook/handlers/testdata/apis/testgroup/crds:all-srcs",
+    ],
     deps = [
-        "//pkg/api:go_default_library",
-        "//pkg/apis/certmanager/v1:go_default_library",
-        "//pkg/apis/certmanager/v1alpha2:go_default_library",
-        "//pkg/apis/certmanager/v1alpha3:go_default_library",
-        "//pkg/apis/certmanager/v1beta1:go_default_library",
-        "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/util/pki:go_default_library",
+        "//pkg/logs/testing:go_default_library",
+        "//pkg/webhook/handlers:go_default_library",
+        "//pkg/webhook/handlers/testdata/apis/testgroup/install:go_default_library",
+        "//pkg/webhook/handlers/testdata/apis/testgroup/v1:go_default_library",
+        "//pkg/webhook/handlers/testdata/apis/testgroup/v2:go_default_library",
         "//test/integration/framework:go_default_library",
         "@io_k8s_apimachinery//pkg/api/equality:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
         "@io_k8s_utils//diff:go_default_library",
+        "@io_k8s_utils//pointer:go_default_library",
     ],
 )
 
