--- a/test/integration/framework/BUILD.bazel
+++ b/test/integration/framework/BUILD.bazel
@@ -9,12 +9,14 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/test/integration/framework",
     visibility = ["//visibility:public"],
     deps = [
+        "//cmd/webhook/app:go_default_library",
         "//cmd/webhook/app/testing:go_default_library",
         "//pkg/api:go_default_library",
         "//pkg/api/testing:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
         "//pkg/client/informers/externalversions:go_default_library",
         "//pkg/controller:go_default_library",
+        "//pkg/webhook/handlers:go_default_library",
         "//test/internal/apiserver:go_default_library",
         "@io_k8s_api//admissionregistration/v1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
@@ -37,6 +39,7 @@ go_library(
         "@io_k8s_kubectl//pkg/util/openapi:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/envtest:go_default_library",
+        "@io_k8s_utils//pointer:go_default_library",
     ],
 )
 
