--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -9,16 +9,21 @@ go_library(
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/util",
     visibility = ["//visibility:public"],
-    deps = ["//pkg/apis/certmanager/v1:go_default_library"],
+    deps = [
+        "//pkg/apis/certmanager/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1/validation:go_default_library",
+    ],
 )
 
 go_test(
     name = "go_default_test",
     srcs = [
+        "useragent_test.go",
         "util_test.go",
         "version_test.go",
     ],
     embed = [":go_default_library"],
+    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
 
 filegroup(
