--- a/pkg/controller/certificates/secrettemplate/BUILD.bazel
+++ b/pkg/controller/certificates/secrettemplate/BUILD.bazel
@@ -2,11 +2,8 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "issuing_controller.go",
-        "temporary.go",
-    ],
-    importpath = "github.com/jetstack/cert-manager/pkg/controller/certificates/issuing",
+    srcs = ["secret_template_controller.go"],
+    importpath = "github.com/jetstack/cert-manager/pkg/controller/certificates/secrettemplate",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/api/util:go_default_library",
@@ -18,24 +15,21 @@ go_library(
         "//pkg/controller:go_default_library",
         "//pkg/controller/certificates:go_default_library",
         "//pkg/controller/certificates/internal/secretsmanager:go_default_library",
-        "//pkg/controller/certificates/trigger/policies:go_default_library",
         "//pkg/logs:go_default_library",
-        "//pkg/util/kube:go_default_library",
-        "//pkg/util/pki:go_default_library",
+        "//pkg/util:go_default_library",
         "//pkg/util/predicate:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
-        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
         "@io_k8s_client_go//informers:go_default_library",
         "@io_k8s_client_go//kubernetes:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
         "@io_k8s_client_go//rest:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
-        "@io_k8s_client_go//tools/record:go_default_library",
         "@io_k8s_client_go//util/workqueue:go_default_library",
-        "@io_k8s_utils//clock:go_default_library",
+        "@io_k8s_sigs_structured_merge_diff_v4//fieldpath:go_default_library",
+        "@io_k8s_utils//pointer:go_default_library",
     ],
 )
 
@@ -55,20 +49,16 @@ filegroup(
 
 go_test(
     name = "go_default_test",
-    srcs = ["issuing_controller_test.go"],
+    srcs = ["secret_template_controller_test.go"],
     embed = [":go_default_library"],
     deps = [
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/controller/certificates/internal/test:go_default_library",
+        "//pkg/controller/certificates/internal/secretsmanager:go_default_library",
         "//pkg/controller/test:go_default_library",
-        "//test/unit/gen:go_default_library",
-        "@com_github_stretchr_testify//require:go_default_library",
+        "//pkg/util/feature:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
-        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
-        "@io_k8s_client_go//testing:go_default_library",
-        "@io_k8s_client_go//tools/cache:go_default_library",
-        "@io_k8s_utils//clock/testing:go_default_library",
     ],
 )
