--- a/test/e2e/suite/BUILD.bazel
+++ b/test/e2e/suite/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "//test/e2e/suite/approval:go_default_library",
         "//test/e2e/suite/conformance:go_default_library",
         "//test/e2e/suite/issuers:go_default_library",
+        "//test/e2e/suite/secrettemplate:go_default_library",
         "//test/e2e/suite/serving:go_default_library",
     ],
 )
@@ -28,6 +29,7 @@ filegroup(
         "//test/e2e/suite/approval:all-srcs",
         "//test/e2e/suite/conformance:all-srcs",
         "//test/e2e/suite/issuers:all-srcs",
+        "//test/e2e/suite/secrettemplate:all-srcs",
         "//test/e2e/suite/serving:all-srcs",
     ],
     tags = ["automanaged"],
