Adds `clock_time_seconds_gauge` metric which returns the current clock time, based on unix time since time began
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/pkg/metrics/BUILD.bazel
+++ b/pkg/metrics/BUILD.bazel
@@ -47,7 +47,9 @@ go_test(
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/logs/testing:go_default_library",
         "//test/unit/gen:go_default_library",
+        "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_utils//clock:go_default_library",
         "@io_k8s_utils//clock/testing:go_default_library",
