--- a/test/e2e/suite/secrettemplate/BUILD.bazel
+++ b/test/e2e/suite/secrettemplate/BUILD.bazel
@@ -8,6 +8,8 @@ go_library(
     deps = [
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/feature:go_default_library",
+        "//pkg/util:go_default_library",
         "//test/e2e/framework:go_default_library",
         "//test/e2e/util:go_default_library",
         "//test/unit/gen:go_default_library",
