--- a/pkg/webhook/BUILD.bazel
+++ b/pkg/webhook/BUILD.bazel
@@ -26,6 +26,7 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
+        "//pkg/webhook/admission:all-srcs",
         "//pkg/webhook/authority:all-srcs",
         "//pkg/webhook/configfile:all-srcs",
         "//pkg/webhook/handlers:all-srcs",
