Add internal webhook package that uses new admission chain
Signed-off-by: James Munnelly <jmunnelly@apple.com>

--- a/internal/BUILD.bazel
+++ b/internal/BUILD.bazel
@@ -19,7 +19,7 @@ filegroup(
         "//internal/ingress:all-srcs",
         "//internal/test/paths:all-srcs",
         "//internal/vault:all-srcs",
-        "//internal/webhook/feature:all-srcs",
+        "//internal/webhook:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
