--- a/cmd/webhook/app/options/BUILD.bazel
+++ b/cmd/webhook/app/options/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "//internal/apis/config/webhook/scheme:go_default_library",
         "//pkg/apis/config/webhook/v1alpha1:go_default_library",
         "//pkg/logs:go_default_library",
+        "//pkg/util/feature:go_default_library",
         "@com_github_spf13_pflag//:go_default_library",
         "@io_k8s_component_base//cli/flag:go_default_library",
     ],
