--- a/internal/BUILD.bazel
+++ b/internal/BUILD.bazel
@@ -19,6 +19,7 @@ filegroup(
         "//internal/ingress:all-srcs",
         "//internal/test/paths:all-srcs",
         "//internal/vault:all-srcs",
+        "//internal/webhook/feature:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
