--- a/pkg/controller/certificate-shim/gateways/BUILD.bazel
+++ b/pkg/controller/certificate-shim/gateways/BUILD.bazel
@@ -45,6 +45,7 @@ go_test(
         "@com_github_stretchr_testify//require:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
+        "@io_k8s_client_go//util/workqueue:go_default_library",
         "@io_k8s_sigs_gateway_api//apis/v1alpha1:go_default_library",
         "@io_k8s_sigs_gateway_api//pkg/client/clientset/versioned:go_default_library",
     ],
