--- a/pkg/controller/certificates/revisionmanager/BUILD.bazel
+++ b/pkg/controller/certificates/revisionmanager/BUILD.bazel
@@ -49,8 +49,8 @@ go_test(
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller:go_default_library",
         "//pkg/controller/test:go_default_library",
-        "//pkg/logs/testing:go_default_library",
         "//test/unit/gen:go_default_library",
+        "@com_github_go_logr_logr//testing:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/types:go_default_library",
