--- a/pkg/issuer/acme/dns/rfc2136/BUILD.bazel
+++ b/pkg/issuer/acme/dns/rfc2136/BUILD.bazel
@@ -37,6 +37,7 @@ go_test(
         "//pkg/logs:go_default_library",
         "//test/acme/dns:go_default_library",
         "//test/acme/dns/server:go_default_library",
+        "@com_github_go_logr_logr//testing:go_default_library",
         "@com_github_miekg_dns//:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
