--- a/test/integration/webhook/BUILD.bazel
+++ b/test/integration/webhook/BUILD.bazel
@@ -8,10 +8,11 @@ go_test(
     ],
     deps = [
         "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/logs/testing:go_default_library",
         "//pkg/webhook/authority:go_default_library",
         "//pkg/webhook/server/tls:go_default_library",
         "//test/integration/framework:go_default_library",
+        "@com_github_go_logr_logr//:go_default_library",
+        "@com_github_go_logr_logr//testing:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
