Run update-codegen in module mode
Signed-off-by: James Munnelly <jmunnelly@apple.com>

--- a/hack/BUILD.bazel
+++ b/hack/BUILD.bazel
@@ -157,6 +157,9 @@ sh_binary(
         GOROOT,
         GAZELLE,
         KAZEL,
+        "//:go.mod",
+        "//:go.sum",
+        "//hack/boilerplate:all-srcs",
         "@io_k8s_code_generator//cmd/client-gen",
         "@io_k8s_code_generator//cmd/conversion-gen",
         "@io_k8s_code_generator//cmd/deepcopy-gen",
